--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "csv": "^5.3.2",
     "discord": "^0.8.2",
     "discord.js": "^12.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.8.1"
   }
 }
